position of play icon in examples moved down to align with centre of parentheses - issue #26

--- a/static/css/kanji-alive.css
+++ b/static/css/kanji-alive.css
@@ -1106,6 +1106,11 @@ div.example-audio, div.example-ja {
 	display:table-cell;
 }
 
+div.example-audio .icon-play {
+	margin-top:3px;
+}
+
+
 .icon-play{
 	position:absolute;
 	right:3px !important;
